# neural-network-compression

./: .gitignore  .isort.cfg  README.md  mypy.ini  nn-presentation.ppt  pyproject.toml
.github/workflows/: main.yml
NN-project-deep-compression/: iris_pruning.py  kmeans_weight_sharing.ipynb  mnist-lenet300-100-pruning.py  mnist-lenet5-pruining.py  nn-presentation.ppt  report_mnist_lenet300  report_mnist_lenet5  utility.py
NN-project-deep-compression/.ipynb_checkpoints/: kmeans_weight_sharing-checkpoint.ipynb
NN-project-deep-compression/checkpoint-lenet300/: ckpt-1.data-00000-of-00001  ckpt-1.index
NN-project-deep-compression/checkpoint-lenet300-after-pruning/: ckpt-1.data-00000-of-00001  ckpt-1.index
NN-project-deep-compression/checkpoint-lenet300-after-quantization/: ckpt-1.data-00000-of-00001  ckpt-1.index
NN-project-deep-compression/checkpoint-lenet300-before-pruning/: ckpt-1.data-00000-of-00001  ckpt-1.index
NN-project-deep-compression/checkpoint-lenet5/: ckpt-1.index
NN-project-deep-compression/checkpoint-lenet5-after-pruning/: ckpt-1.index
NN-project-deep-compression/checkpoint-lenet5-after-quantization/: ckpt-1.index
NN-project-deep-compression/checkpoint-lenet5-before-pruning/: ckpt-1.index
NN-project-deep-compression/report/: my-report-schema.pages
neural_network_compression/: le_net_300_100_trainer.py  main.py  mnist-lenet300-100-pruning.py  mnist-lenet5-pruining.py  trainer.py  utility.py
neural_network_compression/LeNet300100_2BitsDensityQuantization/: report.txt
neural_network_compression/common/: __init__.py  trainer.py  utility.py
(+25 files in other folders)
